console err fix and login design alignment changes

--- a/src/styles.css
+++ b/src/styles.css
@@ -101,12 +101,13 @@ h1 {
 }
 .icon1 {
 	margin: 0 0 1em;
-	padding: .8em 1em;
+	padding: .6em 1em;
 	background: rgba(255, 255, 255, 0.94);
 }
 .icon1 span.fa {
     color: #222;
-    width: 22px;
+    /* width: 22px; */
+    padding-right: 5px;
 }
 .main-icon {
     text-align: center;
